[package]
name = "todobot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.10.9"
dotenv = "0.15.0"
tokio = { version = "1.15.0", features = ["full"] }
serde = { version = "^1.0.101", features = ["derive"] }
serde_json = "^1.0.41"